first implementation of grouped positions view

--- a/PortfolioAce/Views/AllFundsView.xaml
+++ b/PortfolioAce/Views/AllFundsView.xaml
@@ -5,11 +5,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PortfolioAce.Views"
              xmlns:src="clr-namespace:PortfolioAce.Models"
-             mc:Ignorable="d" 
+             xmlns:srcGC="clr-namespace:PortfolioAce.Models.GroupConverters"
+             mc:Ignorable="d"
              d:DesignHeight="720" d:DesignWidth="1280">
     <UserControl.Resources>
         <src:InvertBoolConverter x:Key="invertBoolConverter"/>
         <src:InvertVisibilityConverter x:Key="invertVisibilityConverter"/>
+        <srcGC:PositionMVGroupConverter x:Key="positionSumConverter"/>
     </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -84,9 +86,6 @@
                             <DataGridTextColumn Header="Currency" Binding="{Binding Position.security.Currency.Symbol}" Width="SizeToHeader"/>
                             <DataGridTextColumn Header="Custodian" Binding="{Binding Position.custodian.Name}" Width="*"/>
                         </DataGrid.Columns>
-                        <DataGrid.InputBindings>
-                            <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding PositionDetailCommand}"/>
-                        </DataGrid.InputBindings>
                     </DataGrid>
                 </TabItem>
                 <TabItem Header="Cash Holdings">
@@ -150,6 +149,54 @@
                             <DataGridTextColumn Header="Action Date" Binding="{Binding TransactionDate, StringFormat={}{0:dd/MM/yyyy}}" />
                             <DataGridTextColumn Header="Action Settle Date" Binding="{Binding TransactionSettleDate, StringFormat={}{0:dd/MM/yyyy}}" Width="*"/>
                         </DataGrid.Columns>
+                    </DataGrid>
+                </TabItem>
+                <TabItem Header="Test Positions">
+                    <DataGrid ColumnWidth="*" RowBackground="GhostWhite" AlternatingRowBackground="White" VerticalScrollBarVisibility="Auto" 
+                              AutoGenerateColumns="False" IsReadOnly="True" ItemsSource="{Binding Path=testPositions}">
+                        <DataGrid.GroupStyle>
+                            <GroupStyle>
+                                <GroupStyle.ContainerStyle>
+                                    <Style TargetType="{x:Type GroupItem}">
+                                        <Setter Property="Template">
+                                            <Setter.Value>
+                                                <ControlTemplate x:Name="currentGroup" TargetType="{x:Type GroupItem}">
+                                                    <Expander IsExpanded="True" BorderThickness="1,1,1,5" Background="#adadad">
+                                                        <Expander.Header>
+                                                            <DockPanel>
+                                                                <StackPanel DockPanel.Dock="Left" Orientation="Horizontal">
+                                                                    <TextBlock Margin="5,0,0,0" FontWeight="Bold" Text="{Binding Path=Name.Name}"/>
+                                                                    <TextBlock Margin="50,0,0,0" FontWeight="Bold" Text="No. of Positions:"/>
+                                                                    <TextBlock FontWeight="Bold" Text="{Binding Path=ItemCount, Mode=OneWay}"/>
+                                                                    <TextBlock Margin="50,0,0,0" FontWeight="Bold" Text="{Binding Path=., RelativeSource={RelativeSource AncestorType={x:Type GroupItem}}, Converter={StaticResource positionSumConverter}}"/>
+                                                                </StackPanel>
+                                                            </DockPanel>
+                                                        </Expander.Header>
+                                                        <Expander.Content>
+                                                            <ItemsPresenter/>
+                                                        </Expander.Content>
+                                                    </Expander>
+                                                </ControlTemplate>
+                                            </Setter.Value>
+                                        </Setter>
+                                    </Style>
+                                </GroupStyle.ContainerStyle>
+                            </GroupStyle>
+                        </DataGrid.GroupStyle>
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Name" Binding="{Binding Position.security.SecurityName}" Width="SizeToCells" />
+                            <DataGridTextColumn Header="Symbol" Binding="{Binding Position.security.Symbol}" Width="SizeToHeader"/>
+                            <DataGridTextColumn Header="Quantity" Binding="{Binding Position.NetQuantity, StringFormat=N2}" Width="SizeToHeader"/>
+                            <DataGridTextColumn Header="Avg Cost" Binding="{Binding Position.AverageCost, StringFormat=N2}" Width="SizeToHeader"/>
+                            <DataGridTextColumn Header="Current Price" Binding="{Binding price, StringFormat=N2}" Width="SizeToHeader"/>
+                            <DataGridTextColumn Header="Total PnL" Binding="{Binding TotalPnL, StringFormat=N2}" Width="SizeToHeader"/>
+                            <DataGridTextColumn Header="Market Value Base" Binding="{Binding MarketValueBase, StringFormat=N2}" Width="SizeToHeader"/>
+                            <DataGridTextColumn Header="Currency" Binding="{Binding Position.security.Currency.Symbol}" Width="SizeToHeader"/>
+                            <DataGridTextColumn Header="Custodian" Binding="{Binding Position.custodian.Name}" Width="*"/>
+                        </DataGrid.Columns>
+                        <DataGrid.InputBindings>
+                            <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding PositionDetailCommand}"/>
+                        </DataGrid.InputBindings>
                     </DataGrid>
                 </TabItem>
             </TabControl>
